Add header, radio buttons and lets cook button

--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <html>
   <head>
+    <meta charset="UTF-8">
+    <title>What's For Dinner?</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    
+    <h1>What's For Dinner?</h1>
+    <h2>What are you looking for?</h2>
+    <form>
+      <label>
+        <input type="radio" name="side" value="mealType">Side
+      </label>
+      <label>
+        <input type ="radio" name="mainDish" value="mealType">Main Dish
+      </label>
+      <label>
+        <input type="radio" name="dessert" value="mealTupe">Dessert
+      </label>
+      <label>
+        <input type="radio" name="entireMeal" value="mealType">Entire Meal
+      </label>
+      <button id="letsCook">LET'S COOK!</button>
+    </form>
   </body>
   <script type="text/javascript" src="main.js"></script>
 </html>
+
+    
