Add a div class to border around words

--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
   </head>
   <body>
     <h1>What's For Dinner?</h1>
-    <h2>What are you looking for?</h2>
-    <form>
-      <label>
-        <input type="radio" name="side" value="mealType">Side
-      </label>
-      <label>
-        <input type ="radio" name="mainDish" value="mealType">Main Dish
-      </label>
-      <label>
-        <input type="radio" name="dessert" value="mealTupe">Dessert
-      </label>
-      <label>
-        <input type="radio" name="entireMeal" value="mealType">Entire Meal
-      </label>
-      <button id="letsCook">LET'S COOK!</button>
-    </form>
+    <div class="choice-selection-container">
+      <div class="inline-block-left-side">
+        <h2>What are you looking for?</h2>
+          <label>
+            <input type="radio" name="side" value="mealType">Side
+          </label><br>
+          <label>
+            <input type ="radio" name="mainDish" value="mealType">Main Dish
+          </label><br>
+          <label>
+            <input type="radio" name="dessert" value="mealType">Dessert
+          </label><br>
+          <label>
+            <input type="radio" name="entireMeal" value="mealType">Entire Meal
+          </label><br>
+          <button id="letsCook">LET'S COOK!</button>
+      </div>
+    </div>
+
   </body>
   <script type="text/javascript" src="main.js"></script>
 </html>
