Make slight changes to code to try to get formatting on inline boxes to work

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
           </label><br>
           <button id="letsCook">LET'S COOK!</button>
       </div>
+      <div class="inline-block-right-side">
+        <img src="assets/cookpot.svg" alt="Cookpot image">
+      </div>
     </div>
-
   </body>
   <script type="text/javascript" src="main.js"></script>
 </html>
