--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
   </head>
   <body>
     <h1>What's For Dinner?</h1>
-    <div class="choice-selection-container">
-      <div class="inline-block-left-side">
+    <div class="two-boxes-container">
+      <div class="inline-block">
         <h2>What are you looking for?</h2>
           <label>
-            <input type="radio" name="side" value="mealType">Side
-          </label><br>
+            <input type="radio" id="sideRadioButton" name="mealType" value="sideDish">Side
+          </label><br><br>
           <label>
-            <input type ="radio" name="mainDish" value="mealType">Main Dish
-          </label><br>
+            <input type ="radio" id="mainRadioButton" name="mealType" value="mainDish">Main Dish
+          </label><br><br>
           <label>
-            <input type="radio" name="dessert" value="mealType">Dessert
-          </label><br>
+            <input type="radio" id="dessertRadioButton" name="mealType" value="dessertDish">Dessert
+          </label><br><br>
           <label>
-            <input type="radio" name="entireMeal" value="mealType">Entire Meal
-          </label><br>
+            <input type="radio" id="entireMealRadioButton" name="mealType" value="entireMeal">Entire Meal
+          </label><br><br>
           <button id="letsCook">LET'S COOK!</button>
       </div>
-      <div class="inline-block-right-side">
-        <img src="assets/cookpot.svg" alt="Cookpot image">
+      <div class="inline-block">
+        <div id="dishResult"></div>
+        <img src="assets/cookpot.svg" alt="Cookpot image" class="cookpotImage">
       </div>
     </div>
   </body>
