Make changes to .js .css and .html to fix some bugs

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>What's For Dinner?</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>What's For Dinner?</h1>
+    <header>What's For Dinner?</header>
     <div class="two-boxes-container">
       <div class="inline-block">
-        <h2>What are you looking for?</h2>
+        <h1>What are you looking for?</h1>
           <label>
             <input type="radio" id="sideRadioButton" name="mealType" value="sideDish">Side
           </label><br><br>
@@ -26,7 +25,9 @@
       </div>
       <div class="inline-block">
         <div id="dishResult"></div>
-        <img src="assets/cookpot.svg" alt="Cookpot image" class="cookpotImage">
+        <div id="cookpotImage">
+          <img src="assets/cookpot.svg" alt="Cookpot image" class="cookpotImage">
+        </div>
       </div>
     </div>
   </body>
